@@ -1,9 +1,0 @@
-package com.robertx22.age_of_exile.mixins;
-
-import net.minecraft.world.gen.feature.DefaultBiomeFeatures;
-import org.spongepowered.asm.mixin.Mixin;
-
-@Mixin(DefaultBiomeFeatures.class)
-public class DefaultBiomeFeaturesMixin {
-
-}
